--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,129 @@
 <mat-toolbar color="primary" class="mat-elevation-z8">
-    <span>Examples of HTTP Request</span>
+  <span>Examples of HTTP Request</span>
 </mat-toolbar>
 <br>
-<div fxLayout="row warap" fxLayoutAlign="space-between start" fxLayoutGap="20px">
+<div fxLayout="row warap" fxLayoutAlign="space-around start" fxLayoutGap="20px">
+  <mat-card fxFlex="30" class="mat-elevation-z8">
+    <mat-card-header>
+      <mat-card-title>Simple HTTP Get</mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+      <mat-list *ngIf="simpleReqProductsObs$ | async as prods">
+        <mat-list-item *ngFor="let p of prods">
+          <mat-icon mat-list-icon>shop</mat-icon>
+          <h4 mat-line>{{p.name}}</h4>
+          <p mat-line>Department: {{p.department}}</p>
+          <p mat-line>Price: {{p.price | currency: 'R$ '}}</p>
+        </mat-list-item>
+      </mat-list>
+    </mat-card-content>
+    <mat-card-actions>
+      <button mat-button color="primary" (click)="getSimpleHttpRequest()">
+        <mat-icon>swap_vert</mat-icon> Send Request
+      </button>
+    </mat-card-actions>
+    <mat-card-footer>
+    </mat-card-footer>
+  </mat-card>
+
+  <mat-card fxFlex="20"  class="mat-elevation-z8">
+    <mat-card-header>
+      <mat-card-title>HTTP GET / Error Handling</mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+      <ul *ngIf="productsErrorHandling">
+        <li *ngFor="let p of productsErrorHandling">{{p.name}}</li>  
+      </ul>
+    </mat-card-content>
+    <mat-card-actions>
+      <button mat-button color="accent" (click)="getProductsWithErrorHandling()">
+        <mat-icon>swap_vert</mat-icon> Error Request
+      </button>
+      <button mat-button color="primary" (click)="getProductsWithErrorHandlingOK()">
+        <mat-icon>swap_vert</mat-icon> Success Request
+      </button>
+    </mat-card-actions>
+    <mat-card-footer>	
+    </mat-card-footer>
+  </mat-card>
+
+  <mat-card fxFlex="20"  class="mat-elevation-z8">
+    <mat-card-header>
+      <mat-card-title>HTTP GET / Loading</mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+      <ul *ngIf="productsErrorLoading">
+        <li *ngFor="let p of productsErrorLoading">{{p.name}}</li>  
+      </ul>
+    </mat-card-content>
+    <mat-card-actions>
+      <button mat-button color="primary" (click)="getProductsLoading()">
+        <mat-icon>swap_vert</mat-icon> Success Request
+      </button>
+    </mat-card-actions>
+    <mat-card-footer>	
+      <mat-progress-bar mode="query" *ngIf="bLoading"></mat-progress-bar>
+    </mat-card-footer>
+  </mat-card>
+
+  <mat-card fxFlex="20"  class="mat-elevation-z8">
+    <mat-card-header>
+      <mat-card-title>Getting Text From The Server</mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+      <mat-list>        
+        <mat-list-item *ngFor="let p of productsId; let i = index">
+          <mat-icon mat-list-icon>shop</mat-icon>
+          <h4 mat-line *ngIf="p.name != ''">{{p.name}}</h4>
+          <h4 mat-line *ngIf="p.name == ''">Product: {{i}}</h4>
+          <button mat-icon-button color="primary" *ngIf="p.name == ''" (click)="loadName(p._id)">
+            <mat-icon>refresh</mat-icon>
+          </button>
+        </mat-list-item>
+      </mat-list>
+    </mat-card-content>
+    <mat-card-actions>
+      <button mat-button color="primary" (click)="getProductsIds()">
+        <mat-icon>swap_vert</mat-icon> Get IDs
+      </button>
+    </mat-card-actions>
+    <mat-card-footer>	      
+    </mat-card-footer>
+  </mat-card>
+
+  <mat-card fxFlex="20"  class="mat-elevation-z8">
+    <mat-card-header>
+      <mat-card-title>HTTP Post Request</mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+
+      <div fxLayout="column" fxLayoutAlign="space-around stretch" >
+
+        <mat-form-field >
+          <input matInput placeholder="Product Name" value="" type="text" #name>
+        </mat-form-field>
+        <mat-form-field>
+          <input matInput placeholder="Department" value="" type="text" #dep>
+        </mat-form-field>
+        <mat-form-field>
+          <input matInput placeholder="Price" value="" type="number" #price>
+        </mat-form-field>
+
+      </div>
+          
+    </mat-card-content>
+    <mat-card-actions>
+      <button mat-button color="primary" (click)="saveProduct(name.value, dep.value, price.value)">
+        <mat-icon>save</mat-icon> Save
+      </button>
+    </mat-card-actions>
+    <mat-card-footer>
+      <mat-chip-list>
+        <mat-chip *ngFor="let p of newlyProducts" style="margin-left: 10px; margin-bottom: 10px;"  >
+          {{p.name}}
+        </mat-chip>
+      </mat-chip-list>          	
+    </mat-card-footer>
+  </mat-card> 
 
 </div>
