--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -124,6 +124,58 @@
         </mat-chip>
       </mat-chip-list>          	
     </mat-card-footer>
-  </mat-card> 
+  </mat-card>
+
+  <mat-card fxFlex="30" class="mat-elevation-z8">
+    <mat-card-header>
+      <mat-card-title>HTTP Delete Request</mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+      <mat-list>
+        <mat-list-item *ngFor="let p of productsToDelete">
+          <mat-icon mat-list-icon>shop</mat-icon>
+          <h4 mat-line>{{p.name}}</h4>
+          <p mat-line>Department: {{p.department}}</p>
+          <p mat-line>Price: {{p.price | currency: 'R$ '}}</p>
+          <button mat-icon-button color="accent" (click)="deleteProduct(p)">
+              <mat-icon>delete</mat-icon>
+          </button>
+        </mat-list-item>
+      </mat-list>
+    </mat-card-content>
+    <mat-card-actions>
+      <button mat-button color="primary" (click)="loadProductsToDelete()">
+        <mat-icon>swap_vert</mat-icon> Send Request
+      </button>
+    </mat-card-actions>
+    <mat-card-footer>
+    </mat-card-footer>
+  </mat-card>
+
+  <mat-card fxFlex="30" class="mat-elevation-z8">
+    <mat-card-header>
+      <mat-card-title>HTTP Patch Request</mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+      <mat-list>
+        <mat-list-item *ngFor="let p of productsToEdit">
+          <mat-icon mat-list-icon>shop</mat-icon>
+          <h4 mat-line>{{p.name}}</h4>
+          <p mat-line>Department: {{p.department}}</p>
+          <p mat-line>Price: {{p.price | currency: 'R$ '}}</p>
+          <button mat-icon-button color="accent" (click)="editProduct(p)">
+              <mat-icon>edit</mat-icon>
+          </button>
+        </mat-list-item>
+      </mat-list>
+    </mat-card-content>
+    <mat-card-actions>
+      <button mat-button color="primary" (click)="loadProductsToEdit()">
+        <mat-icon>swap_vert</mat-icon> Load Products
+      </button>
+    </mat-card-actions>
+    <mat-card-footer>
+    </mat-card-footer>
+  </mat-card>
 
 </div>
